--- a/incomeMapBuenosAires.Rmd
+++ b/incomeMapBuenosAires.Rmd
@@ -1,17 +1,18 @@
 ---
 title: "Mapeo de la distribución del ingreso en la Ciudad de Buenos Aires"
-author: "Felipe Gonzalez"
+author: "Felipe González"
 date: "17 de julio de 2015"
 output: html_document
 ---
-```{r,message=FALSE}
+```{r,libraries,message=FALSE}
 rm(list=ls())
 source("src/libraries.R")
 source("src/functions.R")
 source("src/loadingEAHUdata.R")
 source("src/processingEAHU.R")
+```
 
-
+``` {r,dataPreparation,message=FALSE}
 base = select(hogares,idHogar,pondera,ipcf,jefaturaFemenina,jefaturaCompleta,habitanteUnico,hogaresMult,nbi1:nbi,condhab:propietario)
 base$condhab = as.integer(base$condhab)
 
@@ -19,27 +20,69 @@ base$condhab = as.integer(base$condhab)
 base$aniosEscoProm = (base$aniosEscolaridadJefe + base$aniosEscolaridadConyu)/2
 #Cuando hay jefatura incompleta se deja del jefe
 base$aniosEscoProm[is.na(base$aniosEscoProm)] = base$aniosEscolaridadJefe
-
-
 ```
+
 #Introducción
 
-El próposito de este trabajo es mapear la distribución del ingreso en la Ciudad de Buenos Aires. El análisis de la distribución del ingreso en su dimensión espacial arroja otra perspectiva que enrriquece el análisis y puede utilizarse más adelante como insumo para otros análisis (como puede ser por ejemplo la relación entre ersta distribución y la topografía de las redes de servicios públicos provistos por un municipio, o su recaudación impositiva segregada por barrios).
+El propósito de este trabajo es mapear la distribución del ingreso en la Ciudad de Buenos Aires. El análisis de la distribución del ingreso en su dimensión espacial arroja otra perspectiva que enriquece el análisis y puede utilizarse más adelante como insumo para otros análisis (como puede ser por ejemplo la relación entre esta distribución y la topografía de las redes de servicios públicos provistos por un municipio, o su recaudación impositiva segregada por barrios).
 
-Para ello, se utilizará el Censo Nacional de HOgares y Población de 2010 (Censo de aquí en más), dado que es la única fuente estadística que ofrece información desagregada a un nivel geográfico lo suficientemente específico como para realizar mapas que sean significativos. Lamentablemente, el Censo no pregunta por ingreso de manera directa, con lo cual el desafío radica en proponer un proceso que permita a partir de las variables existentes en el censo, llegar a un proxy del ingreso del hogar.
+Para ello, se utilizará el Censo Nacional de Hogares y Población de 2010 (Censo de aquí en más), dado que es la única fuente estadística que ofrece información desagregada a un nivel geográfico lo suficientemente específico como para realizar mapas que sean significativos. Lamentablemente, el Censo no pregunta por ingreso de manera directa, con lo cual el desafío radica en proponer un proceso que permita a partir de las variables existentes en el censo, llegar a un proxy del ingreso del hogar.
 
 La Encuesta Anual de Hogares Urbanos (EAHU) permite validar la relación existente entre determinadas variables a seleccionar y el ingreso del hogar (los diferentes tipos de ingresos). Esta base a su vez, no ofrece niveles de desagregación geográficos útiles, más allá de grandes aglomerados urbanos. Es por ello que el uso complementario de ambas puede llevar a alcanzar el objetivo deseado.
 
 Con este objetivo principal como norte, el trabajo presenta los siguiente objetivos secundarios:
 
-- Analizar las variables disponibles en el Censo 2010 y la EAHU del trercer trimestre del 2010 y comparar las variables que ambas tienen en común y las diferencias que pueda llegar a haber hacia el interior de cada una
+- Analizar las variables disponibles en el Censo 2010 y la EAHU del tercer trimestre del 2010 y comparar las variables que ambas tienen en común y las diferencias que pueda llegar a haber hacia el interior de cada una
 - Determinar, entre las variables que comparten el Censo y la EAHU, cual de ellas (ya sea en modo individual o como combinatoria de las mismas en un índice o indicador) presenta la mayor relación con el ingreso
 - Obtener del Censo 2010 los valores para esa variable (individual o compuesta) a nivel de radio censal
 - Mapear esa variable en mapa de la Ciudad Autónoma de Buenos Aires
 - Esbozar un primer análisis del mapa del ingreso de la Ciudad 
 
+#El ingreso en la Ciudad de Buenos Aires
+
+- Medir el GDB 2010 per capita y comparar con las otras provincias
+- Comparar gini para todas las areas urbanas por provincia
+
 #Variables comunes al Censo 2010 y EAHU
 
+La **Tabla Nº 1** resume las variables que tanto **Censo** como **EAHU** miden y que serán utilizadas en este trabajo para intentar realizar una estimación de la distribución espacial del ingreso. 
+
+
+| **CENSO**                                                    | **EAHU**      |
+| -------------------------------------------------------------|---------------|
+| **Hogares**                                                  | **Hogares**   |
+| V01 - Tipo de vivienda                                       | IV1 - Tipo de vivienda|
+| H16 - Total de ambientes                                     | IV2 - Total de ambientes|
+| H05 - Material predominante de los pisos                     | IV3 - Material predominante de pisos interiores|
+| H06 - Material de la cubierta exterior del techo             | IV4 - Material de la cubierta exterior del techo|
+| H07 - Revestimiento interior o cielorraso del techo          | IV5 - Revestimiento interior o cielorraso del techo|
+| H08 - Tenencia de agua                                       | IV6 - Tenencia de agua|
+| H09 - Procedencia del agua para beber y cocinar              | IV7 – Fuente de agua|
+| H10 - Tiene baño o letrina                                   | IV8 - Tiene baño o letrina|
+| H11 - Tiene botón, cadena, mochila para limpieza del inodoro | IV10 - Tiene botón, cadena, mochila para limpieza del inodoro|
+| H12 - Desagüe del inodoro                                    | IV11 - Desagüe del inodoro |
+| H14 - Combustible usado principalmente para cocinar          | II8 - Combustible utilizado para cocinar |
+| PROP - Tenencia de la vivienda y propiedad del terreno       | II7 - Régimen de tenencia |
+|                                                              |               |
+| **Personas**                                                 | **Personas**  |
+| P01 - Relación de parentesco                                 | CH03 - Relación de Parentesco      |
+| P02 - Sexo                                                   | CH04 - Sexo       |
+| P05 - Pais de nacimiento                                     | CH15 - Pais de nacimiento|
+| P03 - Edad                                                   | CH06 - Edad       |
+| P08 - Asiste o asistió a un establecimiento educativo        | CH10 - Asiste o asistió a un establecimiento educativo     |
+| P09 - Nivel educativo que cursa o cursó                      | CH12 - Nivel educativo que cursa o cursó        |
+| P10 - Completó ese nivel                                     | CH13 - Completó ese nivel        |
+| P11A- Ultimo grado que aprobó en ese nivel                   | CH14 - Último grado que aprobó en ese nivel        |
+| CONDACT - Condición de actividad                             | ESTADO - Condición de actividad      |
+
+
+En la medida en que Buenos Aires presenta el mayor nivel de ingreso per cápita, así como también es un espacio urbano consolidado ya que es una de las ciudades cuyo proceso de urbanización data de los tiempos de la colonia, es de esperar que algunas variables vinculadas a aspectos de la pobreza estructural no tengan tanta incidencia. 
+
+Un ejemplo de ello es la fuente de procedencia del agua donde todos los hogares tienen agua corriente. E incluso son una minoría (el `r round(prop.table(xtabs(pondera ~ iv8 ,hogares))[[2]]*100,2)`%) los que no tienen baño o solo el `r round(prop.table(xtabs(pondera ~ iv6 ,hogares))[[2]]*100,2)`% el que tiene agua por fuera de la vivienda.
+
+```{r, tablaAgua}
+table(hogares$iv7)
+```
 
 #Variable proxy del ingreso
 
@@ -68,15 +111,3 @@ summary(fit)
 #Análisis del mapa del ingreso 
 
 
-
-```{r}
-summary(cars)
-```
-
-You can also embed plots, for example:
-
-```{r, echo=FALSE}
-plot(cars)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
